resources/mesh_gateway_1.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: GW
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 8001
        name: http
        protocol: HTTP
      hosts:
        - "*"
